--- a/webfiles/index.html
+++ b/webfiles/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>my first page</title>
-    <link rel="icon" type="icon/png" href="C:/Users/amir/Desktop/jamesgandolfini400.png">
+    <link rel="icon" type="icon/png" href="">
  </head>
 
 
@@ -15,7 +15,7 @@
                width="350" height="500" alt="ma hero">  
         </figure>
         <footer><p>U can click on photo below to see the best series ever imdb page</p></footer>
-          <a href="https://www.imdb.com/title/tt0141842/"><img src="C:/Users/amir/Desktop/jamesgandolfini400.png" alt="tony soprano picture"></a>
+          <a href="https://www.imdb.com/title/tt0141842/"><img src="" alt="tony soprano picture"></a>
 
           <br>
 
