--- a/webfiles/index.html
+++ b/webfiles/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>my first page</title>
-    <link rel="icon" type="icon/png" href="">
+    <link rel="icon" type="icon/png" href="https://github.com/ammiroo98/website/blob/main/webfiles/tony-soprano.jpg">
  </head>
 
 
@@ -11,11 +11,11 @@
     	<main><p>This is tony soprano fan page.</p></main>
         <br>
          <figure>
-               <img src="C:/Users/amir/Desktop/tony-soprano.jpg."
+               <img src=""
                width="350" height="500" alt="ma hero">  
         </figure>
         <footer><p>U can click on photo below to see the best series ever imdb page</p></footer>
-          <a href="https://www.imdb.com/title/tt0141842/"><img src="" alt="tony soprano picture"></a>
+          <a href="https://www.imdb.com/title/tt0141842/"><img src="https://github.com/ammiroo98/website/blob/main/webfiles/jamesgandolfini400.png" alt="tony soprano picture"></a>
 
           <br>
 
